# voice-ai-companion-

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  Voice_AI_Companion_TZ.docx  create_tz_docx.py  create_tz_docx_v2.py  pyproject.toml
apps/desktop/: README.md  main.js  package-lock.json  package.json  preload.js
apps/desktop/renderer/: app.js  avatar.js  avatar3d-preview.html  avatar3d.js  index.html  styles.css
apps/desktop/web/: app.js  index.html  styles.css
assets/avatars/: metahuman_default.manifest.json
deploy/: companion.service  server_run.sh
docs/: AVATAR_IDLE_LIFE.md  DECISIONS.md  FACE_ANIMBP_STEPS.md  HUME_INTEGRATION.md  IMPLEMENTATION_BLUEPRINT.md  INTEGRATION_KEYS.md  METAHUMAN_CHARACTER_STEPS.md  METAHUMAN_RUNTIME_PLAN.md  NEXT_SPRINT.md  UE_HANDOFF_PROMPT.md  ULTRACODE_PROMPT.md  VOICE_ANALYSIS_PROVIDERS.md
scripts/dev/: check_elevenlabs.py  run_avatar_bridge.py  run_dev_turn.py  run_frontend.py  run_full_stack.sh  run_orchestrator.py  run_pixel_streaming_signalling.sh  run_stack.py  run_unreal_stream.sh  smoke_runtime.py
services/avatar-bridge/: README.md
services/avatar-bridge/avatar_bridge/: __init__.py  api.py  events.py  runtime.py  serializer.py
services/orchestrator/companion_core/: __init__.py  app.py  avatar_bridge.py  config.py  contracts.py  runtime.py  serialization.py
services/orchestrator/tests/: test_audio_mouth.py  test_avatar_bridge.py  test_config.py  test_elevenlabs_stt.py  test_elevenlabs_tts.py  test_http_api.py  test_hume_provider.py  (+6 more)
unreal/CompanionAvatar/: CompanionAvatar.uproject  README.md
(+220 files in other folders)
