[project]
name = "voice-only-ai-companion"
version = "0.1.0"
description = "Local-first macOS voice-only AI companion with MetaHuman avatar runtime."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["services/orchestrator/tests"]

